user-accounts: Fix login keyring password not getting updated

By passing the environment down to passwed rather than an empty one.
This means that passwd's PAM modules will be able to access the session
D-Bus, for the gnome-keyring PAM module to change the keyring password
for example.

https://bugzilla.gnome.org/show_bug.cgi?id=616703